--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.10",
