--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "slugify": "^1.6.6",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
