--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,24 +4,37 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-#node_modules
+# Dependency directories
 node_modules/
 
-dist
-dist-ssr
-*.local
+# Build output
+dist/
+build/
+
+# Vite files
+.vite/
+
+# Local env files
+.env
+.env.local
+.env.*.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
-*.env
+
+# Mac system files
+.DS_Store
+
+# Temporary files
+tmp/
+temp/
+
+# Lint and test files
+coverage/
+*.log
