--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.4.4"
+    "express": "^4.19.2"
   }
 }
