--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,1 @@
-{
-  "version": 2,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/backend/$1" }
-  ]
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/backend" }] }
